cmake_minimum_required(VERSION 2.8)

project(BBS)
option(march "Use --march." OFF)
set(CMAKE_CXX_FLAGS "-Wall -march=native")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
if(march)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
endif()

add_library(bbs_lib genotype.cpp misc.cpp)
add_executable(${PROJECT_NAME} "main.cpp")
target_compile_features(bbs_lib PRIVATE cxx_range_for)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
target_link_libraries(${PROJECT_NAME} bbs_lib)
