cmake_minimum_required(VERSION 2.8)

project(BBS)
option(march "Use --march." OFF)
set(CMAKE_CXX_FLAGS "-Wall -march=native")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
if(march)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
endif()
find_package( ZLIB REQUIRED )
add_library(bbs_lib genotype.cpp misc.cpp plink_common.cpp)
add_executable(${PROJECT_NAME} "main.cpp")
if ( ZLIB_FOUND )
    include_directories( ${ZLIB_INCLUDE_DIRS} )
    target_link_libraries( ${PROJECT_NAME} ${ZLIB_LIBRARIES} )
    target_link_libraries( bbs_lib ${ZLIB_LIBRARIES} )
endif( ZLIB_FOUND )
find_package (Threads REQUIRED)

target_compile_features(bbs_lib PRIVATE cxx_range_for)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
target_link_libraries(${PROJECT_NAME} bbs_lib
    ${CMAKE_THREAD_LIBS_INIT})
